--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "design-house-client",
   "version": "1.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -9,6 +10,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "5.0.0-1624817847.21691f1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
     "bootstrap": "^4.6.0",
@@ -16,10 +18,12 @@
     "core-js": "^3.15.1",
     "node-sass": "^4.14.1",
     "nuxt": "^2.15.7",
-    "sass-loader": "^10.1.1"
+    "sass-loader": "^10.1.1",
+    "vform": "^2.1.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.8",
+    "@nuxtjs/router": "^1.6.1",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.3.2"
   }
