--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
+    "gmap-vue": "^1.5.0",
     "node-sass": "^4.14.1",
     "nuxt": "^2.15.7",
     "sass-loader": "^10.1.1",
-    "vform": "^2.1.1"
+    "vform": "^2.1.1",
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.8",
